--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -36,9 +36,13 @@ jobs:
       with:
         ruby-version: '3.1'
         bundler-cache: true
+        working-directory: .
     
     - name: Install dependencies
-      run: bundle install
+      run: |
+        gem install bundler
+        bundle config set --local path 'vendor/bundle'
+        bundle install --jobs 4 --retry 3
     
     - name: Build site
       run: bundle exec jekyll build
