--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 페르소나5 더 팬텀 X - 루페르넷
 description: 페르소나5 더 팬텀 X 공략 사이트 루페르넷 - 괴도, 페르소나, 계시, 택틱 등 다양한 게임 정보와 전략을 제공합니다.
-# url: https://www.lufel.net
+url: https://absolroot.github.io/lufelnet_test
 author: 루트
 
 # build settings
