--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,6 +47,11 @@ jobs:
     
     - name: Build site
       run: bundle exec jekyll build
+    
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v3
+      with:
+        path: '_site'
 
   # Deployment job
   deploy:
