--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ _site/
 **/name_kr/
 */name_kr/
 /assets/js/_lock.js
-data/kr/wonder/persona_en_source.html
+data/kr/wonder/*source*.html
 
 # OS
 .DS_Store
