persona en&jp complete

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ _site/
 */name_kr/
 /assets/js/_lock.js
 data/kr/wonder/*source*.html
+data/kr/wonder/persona_skills_en_source.json
 
 # OS
 .DS_Store
