--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ collections:
 
 # build settings
 markdown: kramdown
-permalink: /:language/:path/
+permalink: /article/:year/:month/:day/:title/
 
 # 플러그인 설정
 safe: true
@@ -58,6 +58,17 @@ defaults:
     values:
       redirect_from: /tactic
 
+# Article settings
+defaults:
+  -
+    scope:
+      path: "_posts"
+      type: "posts"
+    values:
+      layout: "article"
+      author: "Lufeloper"
+      permalink: /article/:title/
+
 # multilingual settings
 languages: ["kr", "en", "jp", "cn"]
 default_lang: "kr"
@@ -71,11 +82,32 @@ include: ["assets"]
 
 # exclude files/folders
 exclude:
-  - Gemfile
-  - Gemfile.lock
+  - assets/img/
+  - .git
+  - .gitignore
   - node_modules
   - vendor
-  - .gitignore
+  - Gemfile
+  - Gemfile.lock
   - README.md
-  - run.py
+
+# 빌드 성능 최적화
+exclude:
+  - assets/img/
+  - .git
+  - .gitignore
+  - node_modules
+  - vendor
+  - Gemfile
+  - Gemfile.lock
+  - README.md
+
+# 감시 제외 설정
+keep_files:
+  - assets/img
+  - assets/js
+  - assets/css
+
+# 증분 빌드 활성화
+incremental: true
 
