--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ _site/
 /assets/js/_lock.js
 data/kr/wonder/*source*.html
 data/kr/wonder/persona_skills_en_source.json
+_index_backup.html
 
 # OS
 .DS_Store
