--- a/.github/workflows/fetch-api.yaml
+++ b/.github/workflows/fetch-api.yaml
@@ -1,4 +1,3 @@
-# .github/workflows/fetch-external-json.yml
 name: Fetch external JSON every 6h
 
 on:
@@ -32,6 +31,7 @@ jobs:
           # 저장 루트(정적 서빙용)
           ROOT_DIR="data/external"
           mkdir -p "$ROOT_DIR/gacha" "$ROOT_DIR/guildboss" "$ROOT_DIR/sos"
+          mkdir -p "$ROOT_DIR/before"  # 이전 내용 백업용 디렉토리 추가
 
           # 엔드포인트와 리전 정의
           ENDPOINTS=("gacha" "guildboss" "sos")
@@ -44,6 +44,9 @@ jobs:
             local region="$2"
             local url="${BASE_URL}/${endpoint}/${region}"
             local out="${ROOT_DIR}/${endpoint}/${region}.json"
+            local backup_dir="${ROOT_DIR}/before/${endpoint}"
+            local timestamp=$(date +"%Y%m%d_%H%M%S")
+            local backup_file="${backup_dir}/${region}_${timestamp}.json"
 
             echo "➡️  Fetching: ${url}"
 
@@ -60,11 +63,17 @@ jobs:
               if diff -q "$tmp_old" "${tmp_new}.sorted" > /dev/null; then
                 echo "   No change: ${endpoint}/${region}.json"
               else
+                # 이전 버전 백업
+                cp "$out" "$backup_file"
+                echo "   Backup created: ${backup_file}"
+
+                # 새로운 파일 덮어쓰기
                 cp "${tmp_new}.sorted" "$out"
                 echo "   Updated: ${endpoint}/${region}.json"
                 changed=1
               fi
             else
+              # 파일이 없으면 새로운 파일로 저장하고 백업
               cp "${tmp_new}.sorted" "$out"
               echo "   Created: ${endpoint}/${region}.json"
               changed=1
