--- a/.github/workflows/fetch-api.yaml
+++ b/.github/workflows/fetch-api.yaml
@@ -31,11 +31,14 @@ jobs:
           # 저장 루트(정적 서빙용)
           ROOT_DIR="data/external"
           mkdir -p "$ROOT_DIR/gacha" "$ROOT_DIR/guildboss" "$ROOT_DIR/sos"
+          mkdir -p "$ROOT_DIR/character"  # character 저장 루트
           mkdir -p "$ROOT_DIR/before"  # 이전 내용 백업용 디렉토리 추가
+          mkdir -p "$ROOT_DIR/before/character"
 
           # 엔드포인트와 리전 정의
           ENDPOINTS=("gacha" "guildboss" "sos")
           REGIONS=("kr" "en" "cn" "tw" "jp" "sea")
+          CODENAME_FILE="${ROOT_DIR}/character/codename.json"
 
           changed=0
 
@@ -80,11 +83,68 @@ jobs:
             fi
           }
 
+          fetch_and_write_character () {
+            local region="$1"
+            local api_codename="$2"
+            local local_codename="$3"
+            local url="${BASE_URL}/character/${region}/${api_codename}"
+            local out="${ROOT_DIR}/character/${region}/${local_codename}.json"
+            local backup_dir="${ROOT_DIR}/before/character/${region}"
+            local timestamp=$(date +"%Y%m%d_%H%M%S")
+            local backup_file="${backup_dir}/${local_codename}_${timestamp}.json"
+
+            echo "➡️  Fetching: ${url}"
+
+            tmp_new="$(mktemp)"
+            curl -sS "$url" -o "$tmp_new"
+            jq . "$tmp_new" > /dev/null
+            jq -S . "$tmp_new" > "${tmp_new}.sorted"
+
+            mkdir -p "$(dirname "$out")"
+            mkdir -p "$backup_dir"
+
+            if [ -f "$out" ]; then
+              tmp_old="$(mktemp)"
+              jq -S . "$out" > "$tmp_old"
+              if diff -q "$tmp_old" "${tmp_new}.sorted" > /dev/null; then
+                echo "   No change: character/${region}/${local_codename}.json"
+              else
+                cp "$out" "$backup_file"
+                echo "   Backup created: ${backup_file}"
+                cp "${tmp_new}.sorted" "$out"
+                echo "   Updated: character/${region}/${local_codename}.json"
+                changed=1
+              fi
+            else
+              cp "${tmp_new}.sorted" "$out"
+              echo "   Created: character/${region}/${local_codename}.json"
+              changed=1
+            fi
+          }
+
           for ep in "${ENDPOINTS[@]}"; do
             for rg in "${REGIONS[@]}"; do
               fetch_and_write "$ep" "$rg"
             done
           done
+
+          # character 데이터 수집 (codename 매핑 목록 기반)
+          if [ -f "$CODENAME_FILE" ]; then
+            echo "➡️  Loading codenames mapping from: $CODENAME_FILE"
+            mapfile -t CN_API < <(jq -r '.[].api' "$CODENAME_FILE")
+            mapfile -t CN_LOCAL < <(jq -r '.[].local' "$CODENAME_FILE")
+            for rg in "${REGIONS[@]}"; do
+              mkdir -p "$ROOT_DIR/character/$rg"
+              mkdir -p "$ROOT_DIR/before/character/$rg"
+              for i in "${!CN_API[@]}"; do
+                api_code="${CN_API[$i]}"
+                local_code="${CN_LOCAL[$i]}"
+                fetch_and_write_character "$rg" "$api_code" "$local_code"
+              done
+            done
+          else
+            echo "⚠️  $CODENAME_FILE not found. Skip character fetch."
+          fi
 
           # 변경이 있으면 커밋
           if [ "$changed" -eq 1 ]; then
