--- a/.github/workflows/sync-character.yaml
+++ b/.github/workflows/sync-character.yaml
@@ -42,7 +42,7 @@ jobs:
           if [ ! -f package.json ]; then
             npm init -y
           fi
-          npm i -D recast meriyah prettier
+          npm i -D recast ast-types meriyah prettier
 
       - name: Run sync script
         env:
@@ -51,7 +51,7 @@ jobs:
         run: |
           set -euo pipefail
           # Ensure deps before running (defensive)
-          npm i -D recast meriyah prettier
+          npm i -D recast ast-types meriyah prettier
           node scripts/syncCharacter.mjs --lang "$INPUT_LANG" --code "$INPUT_CODE"
 
       - name: Commit & push if changed
