--- a/.github/workflows/fetch-api.yaml
+++ b/.github/workflows/fetch-api.yaml
@@ -31,9 +31,9 @@ jobs:
           # 저장 루트(정적 서빙용)
           ROOT_DIR="data/external"
           mkdir -p "$ROOT_DIR/gacha" "$ROOT_DIR/guildboss" "$ROOT_DIR/sos"
-          mkdir -p "$ROOT_DIR/character"  # character 저장 루트
+          mkdir -p "$ROOT_DIR/character" "$ROOT_DIR/weapon"  # character/weapon 저장 루트
           mkdir -p "$ROOT_DIR/before"  # 이전 내용 백업용 디렉토리 추가
-          mkdir -p "$ROOT_DIR/before/character"
+          mkdir -p "$ROOT_DIR/before/character" "$ROOT_DIR/before/weapon"
 
           # 엔드포인트와 리전 정의
           ENDPOINTS=("gacha" "guildboss" "sos")
@@ -122,6 +122,45 @@ jobs:
             fi
           }
 
+          fetch_and_write_weapon () {
+            local region="$1"
+            local api_codename="$2"
+            local local_codename="$3"
+            local url="${BASE_URL}/weapon/${region}/${api_codename}"
+            local out="${ROOT_DIR}/weapon/${region}/${local_codename}.json"
+            local backup_dir="${ROOT_DIR}/before/weapon/${region}"
+            local timestamp=$(date +"%Y%m%d_%H%M%S")
+            local backup_file="${backup_dir}/${local_codename}_${timestamp}.json"
+
+            echo "➡️  Fetching: ${url}"
+
+            tmp_new="$(mktemp)"
+            curl -sS "$url" -o "$tmp_new"
+            jq . "$tmp_new" > /dev/null
+            jq -S . "$tmp_new" > "${tmp_new}.sorted"
+
+            mkdir -p "$(dirname "$out")"
+            mkdir -p "$backup_dir"
+
+            if [ -f "$out" ]; then
+              tmp_old="$(mktemp)"
+              jq -S . "$out" > "$tmp_old"
+              if diff -q "$tmp_old" "${tmp_new}.sorted" > /dev/null; then
+                echo "   No change: weapon/${region}/${local_codename}_weapon.json"
+              else
+                cp "$out" "$backup_file"
+                echo "   Backup created: ${backup_file}"
+                cp "${tmp_new}.sorted" "$out"
+                echo "   Updated: weapon/${region}/${local_codename}_weapon.json"
+                changed=1
+              fi
+            else
+              cp "${tmp_new}.sorted" "$out"
+              echo "   Created: weapon/${region}/${local_codename}_weapon.json"
+              changed=1
+            fi
+          }
+
           for ep in "${ENDPOINTS[@]}"; do
             for rg in "${REGIONS[@]}"; do
               fetch_and_write "$ep" "$rg"
@@ -134,12 +173,13 @@ jobs:
             mapfile -t CN_API < <(jq -r '.[].api' "$CODENAME_FILE")
             mapfile -t CN_LOCAL < <(jq -r '.[].local' "$CODENAME_FILE")
             for rg in "${REGIONS[@]}"; do
-              mkdir -p "$ROOT_DIR/character/$rg"
-              mkdir -p "$ROOT_DIR/before/character/$rg"
+              mkdir -p "$ROOT_DIR/character/$rg" "$ROOT_DIR/weapon/$rg"
+              mkdir -p "$ROOT_DIR/before/character/$rg" "$ROOT_DIR/before/weapon/$rg"
               for i in "${!CN_API[@]}"; do
                 api_code="${CN_API[$i]}"
                 local_code="${CN_LOCAL[$i]}"
                 fetch_and_write_character "$rg" "$api_code" "$local_code"
+                fetch_and_write_weapon "$rg" "$api_code" "$local_code"
               done
             done
           else
