--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,15 @@ fetch-persona.mjs
 
 #not yet
 슌·프론티어*
+data/characters/슌·프론티어/
+data/characters/슌·프론티어/*
+data/characters/슌·프론티어/review.js
+data/characters/슌·프론티어/weapon.js
+data/characters/슌·프론티어/persona.js
+data/characters/슌·프론티어/base_stats.js
+data/characters/슌·프론티어/operation.js
+data/characters/슌·프론티어/party.js
+data/characters/슌·프론티어/ritual.js
 data/characters/J&C/
 J&C*
 rating.py
