asset image link

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,7 @@ rating.py
 */dmg-calc/*
 /assets/js/dmg-calc/
 /assets/js/dmg-calc/*
+
+# Article editor
+apps/article-editor/
+apps/article-editor/**
