--- a/.github/workflows/fetch-api-weapon.yaml
+++ b/.github/workflows/fetch-api-weapon.yaml
@@ -1,19 +1,19 @@
-name: Fetch External Core every 6h
+name: Fetch External Weapon every 6h (+2h)
 
 on:
   schedule:
-    - cron: "0 */6 * * *" # 00:00, 06:00, 12:00, 18:00 UTC
+    - cron: "0 2-23/6 * * *" # 02:00, 08:00, 14:00, 20:00 UTC
   workflow_dispatch: {}
 
 permissions:
   contents: write
 
 concurrency:
-  group: fetch-external-core
+  group: fetch-external-weapon
   cancel-in-progress: false
 
 jobs:
-  fetch-core:
+  fetch-weapon:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -22,10 +22,10 @@ jobs:
       - name: Install jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
-      - name: Fetch core data
+      - name: Fetch weapon data
         env:
           BASE_URL: https://iant.kr:5000/data
-          FETCH_MODE: core
+          FETCH_MODE: weapon
         run: |
           bash scripts/fetch-external-data.sh
 
@@ -35,7 +35,7 @@ jobs:
             git config user.name  "github-actions[bot]"
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add -A
-            git commit -m "chore(data): update external core json [skip ci]" || echo "No changes to commit"
+            git commit -m "chore(data): update external weapon json [skip ci]" || echo "No changes to commit"
             git push || echo "Nothing to push or push skipped."
           else
             echo "No changes found."
